--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-styl\
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Movies </title>
+    <link rel="stylesheet" href="style.css">
+    <script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+</head>
+<body>
+<h1>Best Movies in 2017 </h1>
+
+<script src="scripts.js"></script>
+</body>
+</html>
